--- a/src/pages/Intro/Intro.module.css
+++ b/src/pages/Intro/Intro.module.css
@@ -63,7 +63,8 @@
   position: absolute;
   bottom: 120px;
   left: 220px;
-  white-space: "pre-wrap";
+  word-break: keep-all;
+  white-space: pre-wrap;
   font-size: 24px;
   color: var(--black);
   text-align: center;
