--- a/src/pages/Molly/Molly.module.css
+++ b/src/pages/Molly/Molly.module.css
@@ -76,7 +76,8 @@
   position: absolute;
   bottom: 125px;
   left: 220px;
-  white-space: "pre-wrap";
+  word-break: keep-all;
+  white-space: pre-wrap;
   font-size: 24px;
   color: var(--black);
   text-align: center;
