--- a/src/pages/Molly/Molly.module.css
+++ b/src/pages/Molly/Molly.module.css
@@ -72,10 +72,12 @@
 
 .dialogText {
   width: 600px;
-  height: 100px;
+  max-height: 165px;
   position: absolute;
-  bottom: 125px;
-  left: 220px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  top: 540px;
+  left: 230px;
   word-break: keep-all;
   white-space: pre-wrap;
   font-size: 24px;
