--- a/src/componets/CrushBar.module.css
+++ b/src/componets/CrushBar.module.css
@@ -6,6 +6,7 @@
   background-color: #fff;
   border-radius: 50px;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
 }
 
 .progress_bar {
@@ -16,6 +17,7 @@
   background: rgba(252, 221, 221, 0.65);
   border-radius: 50px;
   font-size: 20px;
+  
 }
 
 .progress_bar img {
